--- a/src/scss/partials/_grid.scss
+++ b/src/scss/partials/_grid.scss
@@ -3,7 +3,8 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(17.91rem, 1fr));
-  gap: 2.5rem 0.7rem;
+  gap: get-clamp(2.5rem, 5rem, 23.4375rem, 62.5rem)
+    get-clamp(0.7rem, 1.88rem, 23.4375rem, 62.5rem);
   padding-bottom: get-clamp(5rem, 8.75rem, 48rem, 62.5rem);
 
   @include mq(768px) {
