--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -4,6 +4,5 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-inline: auto;
   padding-block: get-clamp(1rem, 1.5rem, 23.4375rem, 48rem);
 }
